# Khmer-OCR-CNN-Transformer

./: .gitignore  LICENSE  crnn_se_model.py  generate_document_text.py  generate_scene_text.py  inference.py  inference_pdf.py  ocr_engine.py  pyproject.toml  readme.md  recognize.py  recognize_line.py  requirements.txt  setup.py  vgg_model.py
detection/: detector.py  goc_4.tiff  mef_2.tiff  preprocessor.py  utils.py
detection/det-b0/: config.json
detection/detection_results/goc_4/: goc_4_layout.json
detection/detection_results/mef_2/: mef_2_layout.json
detection/detection_results/pp_gov_4/: pp_gov_4_layout.json
netra_ocr/: ocr_engine.py  output_formatters.py  textline_detection.py
netra_ocr/detection/: config.py  detector.py  model.py  test.py  utils.py  utils_test.py
netra_ocr/recognition/: char2idx_new.json  config.py  idx2char.json  idx2char_new.json  predictor.py  recognize_text.py
netra_ocr/recognition/model/: se_model.py  vgg_model.py
recognition/: preprocessor.py  recognize_text.py
results/: khmer_document_4.txt  test_image.txt
scripts/: generate_document_text.py  generate_scene_text.py  test_func.py
se_transformer_recognition/: char2idx.json  predictor.py  preprocessor.py  recognition.py  test.py  tokenizer.py  utils.py
se_transformer_recognition/model/: resnet_model.py  se_model.py
segformer_detection/: config.py  detection.py  preprocessor.py  test.py  utils_test.py
segformer_detection/detection_results/goc_4/: goc_4_layout.json
segformer_detection/detection_results/mef_2/: mef_2_layout.json
training notebooks/: CNN-Transformer.ipynb  ResNet-Transformer.ipynb
